{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 367,
  "lineage": "38902738-8c66-d864-c770-522f81c29596",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "techcorp_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030763b43e0e1022e",
            "arn": "arn:aws:ec2:us-east-1:839026370596:elastic-ip/eipalloc-030763b43e0e1022e",
            "association_id": "eipassoc-013207a32dd404677",
            "domain": "vpc",
            "id": "eipalloc-030763b43e0e1022e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b52dc175e83171a2",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-18-204-53-193.compute-1.amazonaws.com",
            "public_ip": "18.204.53.193",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-nat-eip"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "techcorp_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:839026370596:instance/i-0728d071e4a85ae6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0728d071e4a85ae6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d102e3ee2b4995d2"
              }
            ],
            "primary_network_interface_id": "eni-0d102e3ee2b4995d2",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-100-31-237-53.compute-1.amazonaws.com",
            "public_ip": "100.31.237.53",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047503739f7ad5be7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7bb4f561d6a02f6",
            "tags": {
              "Name": "techcorp-bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e641708aec84951"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "i-0728d071e4a85ae6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.techcorp_web_key_pair",
            "aws_security_group.techcorp_bastion_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "techcorp_db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:839026370596:instance/i-0cf8784772f82b8b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf8784772f82b8b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "techcorp-web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-087b89490b144e944"
              }
            ],
            "primary_network_interface_id": "eni-087b89490b144e944",
            "private_dns": "ip-10-0-3-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.173",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8fdb39262469b4b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a90e906c1e95c5b3",
            "tags": {
              "Name": "techcorp-db-server"
            },
            "tags_all": {
              "Name": "techcorp-db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034822a0830e89abb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "i-0cf8784772f82b8b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.techcorp_web_key_pair",
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_db_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "techcorp_web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:839026370596:instance/i-06cb88e9c972ceac1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cb88e9c972ceac1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-085b4741a89a2e19e"
              }
            ],
            "primary_network_interface_id": "eni-085b4741a89a2e19e",
            "private_dns": "ip-10-0-3-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0414d6f3ca0ebf8df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a90e906c1e95c5b3",
            "tags": {
              "Name": "techcorp-web-server-1"
            },
            "tags_all": {
              "Name": "techcorp-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00de8533c44a78609"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "i-06cb88e9c972ceac1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.techcorp_web_key_pair",
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "techcorp_web_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:839026370596:instance/i-012e7cbdb14db6e3c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012e7cbdb14db6e3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-099ba67cde383f440"
              }
            ],
            "primary_network_interface_id": "eni-099ba67cde383f440",
            "private_dns": "ip-10-0-4-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.196",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b3692293075d863",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066743f460e6ef2fa",
            "tags": {
              "Name": "techcorp-web-server-2"
            },
            "tags_all": {
              "Name": "techcorp-web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00de8533c44a78609"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "i-012e7cbdb14db6e3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.techcorp_web_key_pair",
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techcorp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:internet-gateway/igw-0bf86568cb2f0d546",
            "id": "igw-0bf86568cb2f0d546",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "techcorp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:loadbalancer/app/techcorp-alb/a085fe3dd1c1b28b",
            "arn_suffix": "app/techcorp-alb/a085fe3dd1c1b28b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-1946149076.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:839026370596:loadbalancer/app/techcorp-alb/a085fe3dd1c1b28b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0cec75237ee9849a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06cc2e05cb7ee923c"
              },
              {
                "subnet_id": "subnet-0a7bb4f561d6a02f6"
              }
            ],
            "subnets": [
              "subnet-06cc2e05cb7ee923c",
              "subnet-0a7bb4f561d6a02f6"
            ],
            "vpc_id": "vpc-0d6ec5352ab2da21c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:loadbalancer/app/techcorp-alb/a085fe3dd1c1b28b"
          },
          "dependencies": [
            "aws_security_group.techcorp_alb_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:listener/app/techcorp-alb/a085fe3dd1c1b28b/054dabfd47f99ada",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:839026370596:listener/app/techcorp-alb/a085fe3dd1c1b28b/054dabfd47f99ada",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:loadbalancer/app/techcorp-alb/a085fe3dd1c1b28b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:listener/app/techcorp-alb/a085fe3dd1c1b28b/054dabfd47f99ada"
          },
          "dependencies": [
            "aws_lb.techcorp_alb",
            "aws_lb_target_group.techcorp_alb_target_group",
            "aws_security_group.techcorp_alb_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "techcorp_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "arn_suffix": "targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:839026370596:loadbalancer/app/techcorp-alb/a085fe3dd1c1b28b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "techcorp_web_server_1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf,i-06cb88e9c972ceac1,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "target_id": "i-06cb88e9c972ceac1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "target_id": "i-06cb88e9c972ceac1"
          },
          "dependencies": [
            "aws_instance.techcorp_web_server_1",
            "aws_key_pair.techcorp_web_key_pair",
            "aws_lb_target_group.techcorp_alb_target_group",
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "techcorp_web_server_2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf,i-012e7cbdb14db6e3c,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "target_id": "i-012e7cbdb14db6e3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839026370596:targetgroup/techcorp-alb-target-group/92137e0bc1e33baf",
            "target_id": "i-012e7cbdb14db6e3c"
          },
          "dependencies": [
            "aws_instance.techcorp_web_server_2",
            "aws_key_pair.techcorp_web_key_pair",
            "aws_lb_target_group.techcorp_alb_target_group",
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "techcorp_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030763b43e0e1022e",
            "association_id": "eipassoc-013207a32dd404677",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-00d8c4fdbfc60eab7",
            "network_interface_id": "eni-0b52dc175e83171a2",
            "private_ip": "10.0.1.72",
            "public_ip": "18.204.53.193",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7bb4f561d6a02f6",
            "tags": {
              "Name": "techcorp-nat-gateway"
            },
            "tags_all": {
              "Name": "techcorp-nat-gateway"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techcorp_nat_eip",
            "aws_internet_gateway.techcorp_igw",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techcorp_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:route-table/rtb-050fc775947c85ef3",
            "id": "rtb-050fc775947c85ef3",
            "owner_id": "839026370596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00d8c4fdbfc60eab7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-route-table"
            },
            "tags_all": {
              "Name": "techcorp-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "rtb-050fc775947c85ef3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.techcorp_nat_eip",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_gateway",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techcorp_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:route-table/rtb-0b88828ced605d721",
            "id": "rtb-0b88828ced605d721",
            "owner_id": "839026370596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf86568cb2f0d546",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-route-table"
            },
            "tags_all": {
              "Name": "techcorp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "rtb-0b88828ced605d721",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techcorp_private_route_table_association_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008c254c04da1438a",
            "region": "us-east-1",
            "route_table_id": "rtb-050fc775947c85ef3",
            "subnet_id": "subnet-0a90e906c1e95c5b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techcorp_nat_eip",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_gateway",
            "aws_route_table.techcorp_private_route_table",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techcorp_private_route_table_association_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095008b3f1033998f",
            "region": "us-east-1",
            "route_table_id": "rtb-050fc775947c85ef3",
            "subnet_id": "subnet-066743f460e6ef2fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techcorp_nat_eip",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_gateway",
            "aws_route_table.techcorp_private_route_table",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techcorp_public_route_table_association_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dd4d79b8f9a5dfe",
            "region": "us-east-1",
            "route_table_id": "rtb-0b88828ced605d721",
            "subnet_id": "subnet-0a7bb4f561d6a02f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.techcorp_public_route_table",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techcorp_public_route_table_association_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d95a4238f7cd1d93",
            "region": "us-east-1",
            "route_table_id": "rtb-0b88828ced605d721",
            "subnet_id": "subnet-06cc2e05cb7ee923c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.techcorp_public_route_table",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techcorp_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:security-group/sg-0cec75237ee9849a8",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0cec75237ee9849a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techcorp-alb-sg",
            "name_prefix": "",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "sg-0cec75237ee9849a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techcorp_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:security-group/sg-01e641708aec84951",
            "description": "Security group for bastion servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-01e641708aec84951",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.89.85.153/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "sg-01e641708aec84951",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techcorp_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:security-group/sg-034822a0830e89abb",
            "description": "Security group for postgersql db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034822a0830e89abb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e641708aec84951"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00de8533c44a78609"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "techcorp-db-sg",
            "name_prefix": "",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "sg-034822a0830e89abb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_security_group.techcorp_web_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techcorp_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:security-group/sg-00de8533c44a78609",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00de8533c44a78609",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e641708aec84951"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cec75237ee9849a8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "sg-00de8533c44a78609",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.techcorp_alb_sg",
            "aws_security_group.techcorp_bastion_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:subnet/subnet-0a90e906c1e95c5b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90e906c1e95c5b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839026370596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "subnet-0a90e906c1e95c5b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:subnet/subnet-066743f460e6ef2fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066743f460e6ef2fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839026370596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "subnet-066743f460e6ef2fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:subnet/subnet-0a7bb4f561d6a02f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7bb4f561d6a02f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839026370596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "subnet-0a7bb4f561d6a02f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:subnet/subnet-06cc2e05cb7ee923c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cc2e05cb7ee923c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839026370596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-0d6ec5352ab2da21c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "subnet-06cc2e05cb7ee923c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techcorp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839026370596:vpc/vpc-0d6ec5352ab2da21c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f4d29d172e54f2c",
            "default_route_table_id": "rtb-0ec75ab396122cdcd",
            "default_security_group_id": "sg-0de34e9c2cff74fb1",
            "dhcp_options_id": "dopt-0ef4b9e8c44234818",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6ec5352ab2da21c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec75ab396122cdcd",
            "owner_id": "839026370596",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "839026370596",
            "id": "vpc-0d6ec5352ab2da21c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}